--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>java-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <log4j2.version>2.14.0</log4j2.version>
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -59,18 +62,31 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.8.2</version>
+            <version>${log4j2.version}</version>
         </dependency>
         <!-- log4j2核心包，注意路径与log4j不同 -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.8.2</version>
+            <version>${log4j2.version}</version>
+
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.8.2</version>
+            <version>${log4j2.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <!--<version>1.2.24</version>-->
+            <!--<version>1.2.41</version>-->
+            <!--<version>1.2.42</version>-->
+            <!--<version>1.2.43</version>-->
+            <version>1.2.47</version>
         </dependency>
 
 
